// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeDotsIcon: Component should render correctly 1`] = `
<three-dots.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "20px",
      "width": "20px",
    }
  }
/>
`;

exports[`ThreeDotsIcon: Component should render with custom styles 1`] = `
<three-dots.svg
  style={
    Object {
      "fill": "blue",
      "height": "20px",
      "width": "20px",
    }
  }
/>
`;
